force-app/main/default/objects/Auth0__mdt/Auth0__mdt.object-meta.xml
<CustomObject>
    <label>Auth0</label>
</CustomObject>