force-app/main/default/objects/Auth0__mdt/fields/Audience__c.field-meta.xml
<CustomField>
    <fullName>Audience__c</fullName>
    <label>Audience</label>
    <length>80</length>
    <type>Text</type>
</CustomField>