force-app/main/default/objects/Auth0__mdt/fields/ClientId__c.field-meta.xml
<CustomField>
    <fullName>ClientId__c</fullName>
    <label>ClientId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>