force-app/main/default/objects/Auth0__mdt/fields/GrantType__c.field-meta.xml
<CustomField>
    <fullName>GrantType__c</fullName>
    <label>許可タイプ</label>
    <length>80</length>
    <type>Text</type>
</CustomField>